--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,17 @@ jobs:
 
       - name: Install ldid
         run: |
-          curl -LO https://github.com/ProcursusTeam/ldid/releases/latest/download/ldid_macosx_x86_64
-          sudo install -m755 ldid_macosx_x86_64 /usr/local/bin/ldid
+          # Only install ldid if it's not already available
+          if command -v ldid >/dev/null 2>&1; then
+            echo "ldid already installed at: $(command -v ldid)"
+            ldid --version || true
+          else
+            echo "ldid not found — downloading and installing"
+            curl -LO https://github.com/ProcursusTeam/ldid/releases/latest/download/ldid_macosx_x86_64
+            sudo install -m755 ldid_macosx_x86_64 /usr/local/bin/ldid
+            rm -f ldid_macosx_x86_64
+            echo "ldid installed at: $(command -v ldid)"
+          fi
 
       - name: Cache Xcode DerivedData
         uses: actions/cache@v4
