--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -527,7 +527,9 @@ jobs:
           fi
 
           # Use the release download prefix so generated appcast points at the release asset URLs.
-          RELEASE_BASE="https://github.com/${REPO}/releases/download/${TAG}"
+          echo "Using release tag: $TAG"
+          RELEASE_BASE="https://test.com/${REPO}/releases/download/$TAG"
+          echo "Release base URL: $RELEASE_BASE"
 
           # generate_appcast will sign updates and write an appcast file into the archives directory.
           # pass the EdDSA private key via stdin using --ed-key-file -.
