--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -58,6 +58,7 @@ jobs:
         if: failure()
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const log = fs.readFileSync('build-macos.log', 'utf8');
@@ -73,7 +74,8 @@ jobs:
       - name: Comment on PR (Success)
         if: success()
         uses: actions/github-script@v7
-        with:
+        with:      
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             await github.rest.issues.createComment({
               owner: context.repo.owner,
@@ -134,6 +136,7 @@ jobs:
         if: failure()
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const log = fs.readFileSync('build-ios.log', 'utf8');
@@ -150,6 +153,7 @@ jobs:
         if: success()
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             await github.rest.issues.createComment({
               owner: context.repo.owner,
