--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -129,7 +129,7 @@ jobs:
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Paicord-macOS-PR-${{ github.event.issue.number }}
+          name: Paicord-macOS
           path: dist/Paicord-macOS-*.zip
 
   build-ios:
@@ -240,7 +240,7 @@ jobs:
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Paicord-iOS-PR-${{ github.event.issue.number }}
+          name: Paicord-iOS
           path: dist/Paicord-iOS-*.ipa
 
   comment-finish:
