--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,13 @@ jobs:
           restore-keys: |
             deriveddata-macos
 
+      - name: Force Git to use HTTPS
+        run: |
+          # rewrite any git@github.com:... clones to https://github.com/...
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          # optional: debug the rule
+          git config --get-regexp '^url\.' || true
+
       - name: Build macOS .app
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
@@ -225,6 +232,13 @@ jobs:
           key: deriveddata-ios-${{ hashFiles('.github/workflows/build.yml') }}
           restore-keys: |
             deriveddata-ios
+
+      - name: Force Git to use HTTPS
+        run: |
+          # rewrite any git@github.com:... clones to https://github.com/...
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          # optional: debug the rule
+          git config --get-regexp '^url\.' || true
 
       - name: Build iOS .ipa
         run: |
